Inline Save: Prevent Situation Where Mode Isn't Visible On Desktop

--- a/css/admin.less
+++ b/css/admin.less
@@ -1248,7 +1248,7 @@
 
 			float: right;
 
-			@media (min-width: 980px) {
+			@media (max-width: 980px) {
 
 				.so-mode.button-secondary.so-mode {
 					display: none;
